 * Fix issue #81: Remove svn:ignore property when .cvsignore is deleted.
 * Fix svn dumpfile conformance:
   - Don't include a leading '/' for Node-path.
   - Include the Node-kind field when copying nodes.
 * Make symlink test create symlinks explicitly, to avoid packaging problems.
 * Accept symbol references to revision numbers that end with ".0".

 Improvements and output changes:

 Miscellaneous:
 * cvs2svn now requires Python version 2.4 or later.


Version 2.1.1 (15 April 2008)
-----------------------------

 Bugs fixed:
 * Make files that are to be sorted more text-like to fix problem on Windows.
 * Fix comment in header of --write-symbol-info output file.

 Miscellaneous
 * Adjust test suite for upstream changes in the svntest code.


Version 2.1.0 (19 February 2008)
--------------------------------

 New features:
 * Allow conversion of a CVS repository to git (experimental).
   - Support mapping from cvs author names to git "Author <email>" form.
 * Enhance symbol transform capabilities:
   - Add SymbolMapper, for transforming specific symbols in specific files.
   - Allow SymbolTransforms to cause a symbol to be discarded.
 * Enhance symbol strategy capabilities:
   - Write each CVS branch/tag to be written to an arbitrary SVN path.
   - Choose which trunk/branch should serve as the parent of each branch/tag.
   - --symbol-hints: manually specify how symbols should be converted.
   - Make symbol strategy rules project-specific.
 * --write-symbol-info: output info about CVS symbols.
 * Add option ctx.decode_apple_single for handling AppleSingle-encoded files.
 * Add a new, restartable pass that converts author and log_msg to unicode.
 * Allow properties to be left unset via auto-props using a leading '!'.

 Bugs fixed:
 * Fix issue #80: Empty CVS,v file not accepted.
 * Fix issue #108: Create project TTB directories "just-in-time".
 * Fix issue #112: Random test failures with Python 2.5.
 * Fix issue #115: crash - Bad file descriptor.